[gd_scene load_steps=5 format=3 uid="uid://daeb8utifp7hm"]

[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="1_yagks"]
[ext_resource type="Texture2D" uid="uid://pqmuwg0ebtg" path="res://MainMenu/SettingsGear.png" id="2_dq7eo"]
[ext_resource type="Texture2D" uid="uid://b4p3f4bcof1a" path="res://MainMenu/BugReport.png" id="2_wps2v"]
[ext_resource type="Texture2D" uid="uid://dc4y3kjbkd8ec" path="res://MainMenu/Discord.png" id="3_oibe7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yagks")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -958.0
offset_top = -542.0
offset_right = 961.0
offset_bottom = 541.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -960.0
offset_top = -524.0
offset_right = 960.0
offset_bottom = -248.0
theme_override_font_sizes/font_size = 200
text = "ELEMENTAL CLASH"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
offset_left = -128.0
offset_top = -140.0
offset_right = 128.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 90
text = "PLAY"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 2
offset_left = -112.0
offset_top = 100.0
offset_right = 112.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 90
text = "EXIT"

[node name="LinkButton" type="Button" parent="."]
layout_mode = 2
offset_left = 128.0
offset_top = 396.0
offset_right = 224.0
offset_bottom = 484.0
size_flags_vertical = 4
icon = ExtResource("2_wps2v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 396.0
offset_right = 912.0
offset_bottom = 1276.0
grow_horizontal = 2
scale = Vector2(0.1, 0.1)
icon = ExtResource("2_dq7eo")
flat = true
icon_alignment = 1
expand_icon = true

[node name="DiscordButton" type="Button" parent="."]
layout_mode = 0
offset_left = -216.0
offset_top = 396.0
offset_right = -128.0
offset_bottom = 484.0
icon = ExtResource("3_oibe7")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="LinkButton" to="." method="_on_link_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="DiscordButton" to="." method="_on_discord_pressed"]
